--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,26 @@
 *,
 *::before,
 *::after {
-box-sizing: border-box;
-margin: 0;
-padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html,
 body {
-height: 100%;
+  height: 100%;
 }
 
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f0f4f8;
-  margin: 0;
-  padding: 0;
+#root {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  gap: 50px;
+  width: 100%;
+  height: 100%;
+  background-color: #f0f4f8;
+  font-family: Arial, sans-serif;
 }
 
 .counter {
@@ -55,4 +56,8 @@ button {
 
 button:hover {
   background-color: #006666;
+}
+
+.counter-title {
+  font-size: 40px;
 }
